--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>A Colorful Website</title>
+    <link rel="stylesheet" href="style.css" />
     <meta charset="utf-8" />
 </head>
 
@@ -24,4 +25,5 @@
         <a href="blue.html">The Blue Page</a>
     </li>
 </ul>
+
 </html>
