--- a/rainbow.html
+++ b/rainbow.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>A Crazy Experiment</title>
+    <link rel="stylesheet" href="style.css" />
     <meta charset="utf-8" />
 </head>
 
